# PlaNet_Equil_reconstruction

./: .gitignore  .gitmodules  PlaNet_Equil_kin_Colab_NeuralOp_grid_ok_onlytrain_enc_dec_best.ipynb  README.md  gitignore  inverse_equilibrium_ITER_like.ipynb  main.py  makefile  pyproject.toml  requirements.txt
config/: config.yml  config_sample.yaml  config_train_TF.yml
data/: id_test.npy  id_train.npy
environments/: env_mac.yml  environment.yml  requirements.txt
notebooks/: check_lr_scheduler.ipynb  check_results.ipynb  main_PlaNet_ensemble_article_NeuralOpt.py  prepare_data_PlaNet.ipynb  prepare_data_PlaNet_TF.ipynb  prepare_data_PlaNet_sample.ipynb  utils.py
notebooks/old/: prepare_data_NeuralOp_super_res.ipynb
planet/: config.py  constants.py  data.py  loss.py  mlp.py  model.py  pipeline.py  plot.py  train.py  utils.py
planet/scripts/: main_data.py  main_model.py  main_train.py  ref.ipynb
planet/test/: test_dataloader.py  test_gs_operator.py
planet/test/data/: iter_like_data_sample.h5
planet/tests/: test_config.py  test_dataloader.py  test_gs_operator.py  test_model.py
planet/tests/data/: config.yml
scripts/: main.py
src/: utils.py
src/dataloaders/: mnist_craft_dataloader.py  mnist_dataloader.py
src/eval/: evaluate.py
src/models/: pl_model.py  planet.py  pytorch_model.py
src/modules/: custom_losses.py
src/train/: train.py  utils_train.py
src_old/: constants.py  utils.py
src_old/callbacks/: custom_callbacks.py
src_old/dataloaders/: __init__.py  mnist_craft_dataloader.py  mnist_dataloader.py
src_old/eval/: evaluate.py
src_old/models/: __init__.py  planet.py
src_old/train/: train.py  utils_train.py
trained_models/PlaNet_10ksample_no_physics_informed/: configs.yaml  trained_model.keras
trained_models/PlaNet_10ksample_physics_informed/: configs.yaml  trained_model.keras
trained_models/PlaNet_70ksample_no_physics_informed/: configs.yaml  trained_model.keras
trained_models/PlaNet_70ksample_physics_informed/: configs.yaml  trained_model.keras
trained_models/PlaNet_no_physics_informed/: configs.yaml  history.pkl  trained_model.keras
trained_models/PlaNet_physics_informed/: configs.yaml  history.pkl  trained_model.keras
