[tool.poetry]
name = "planet"
version = "0.1.0"
description = "PlaNet: reconstruction of plasma equilibrium and separatrix using convolutional physics-informed neural operator. See https://doi.org/10.1016/j.fusengdes.2024.114193"
readme = "README.md"
authors = ["Matteo Bonotto <m.bonotto@outlook.com>"]
license = "MIT"  # Specify the license

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
datasets = "^3.3.2"
ipykernel = "^6.29.5"
lightning = "^2.5.1.post0"
matplotlib = "^3.10.1"
mypy = "^1.15.0"
plotly = "^6.0.0"
poetry = "^2.1.1"
scikit-learn = "^1.6.1"
scipy="^1.15.2"
tqdm = "^4.67.1"
torchinfo = "^1.8.0"
pandas = "^2.2.3"
numpy ="^2.0.2"
torch = "^2.7.0"
h5py = "^3.13.0"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.5.1"  # Ensures proper package discovery

[tool.poetry.build]
generate-setup-file = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = [
    "src_old/*",
]

[tool.pytest.ini_options]
markers = [
    "slow",
]

